// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchoolLandingPage renders correctly 1`] = `
Array [
  <header
    className="sticky top-0 z-20 shadow-md text-white bg-blue-500"
  >
    <div
      className="container mx-auto"
    >
      <div
        className="flex flex-wrap items-center"
      >
        <a
          aria-current="page"
          className="inline-flex items-center h-20 text-lg md:h-24 logo"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
          style={Object {}}
        >
          <span
            className="font-semibold"
          >
            dsacademy2
          </span>
        </a>
        <nav
          className="items-center order-3 w-full ml-auto list-none lg:flex lg:space-y-0 space-y-3 
						lg:space-x-6 lg:order-1 lg:w-auto py-8 lg:py-0 border-t lg:border-t-0 border-white border-opacity-25 
						hidden"
        >
          <li>
            <a
              className=""
              href="/#overview"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Overview
            </a>
          </li>
          <li>
            <a
              className=""
              href="/#courses"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Courses
            </a>
          </li>
          <li>
            <a
              className=""
              href="/login"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Login
            </a>
          </li>
          <li>
            <a
              className="btn btn-white"
              href="/register"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Enroll Now
            </a>
          </li>
        </nav>
        <button
          className="block w-8 h-6 ml-auto cursor-pointer lg:hidden burger-menu 
						"
          onClick={[Function]}
          tabIndex={0}
        >
          <div
            className="bar"
          />
          <div
            className="bar"
          />
          <div
            className="bar"
          />
        </button>
      </div>
    </div>
  </header>,
  <main>
    <section
      className="py-16 md:py-20"
    >
      <div
        className="container"
      >
        <div>
          <h1
            className="mb-4 text-center"
          >
            dsacademy2
          </h1>
          <h3
            className="mb-4 text-center"
          />
          <p
            className="mx-auto text-center mb-6 text-xl font-light leading-relaxed text-gray-700 md:mb-10 lg:text-xl lg:w-7/12 xl:w-6/12"
          />
          <div
            className="text-center"
          >
            <a
              className="btn text-white bg-blue-500 text-lg btn-lg"
              href="/#courses"
              onClick={[Function]}
              onMouseEnter={[Function]}
              text="View Courses"
            >
              View Courses
            </a>
          </div>
        </div>
      </div>
    </section>
    <section
      className="py-16 bg-gray-200 md:py-32"
      id="video"
    >
      <div
        className="container"
      >
        <div
          className="mx-auto lg:w-9/12"
        >
          <div
            className="shadow-xl md:shadow-2xl responsive-video"
          >
            <div
              className="bg-black video-wrapper"
            >
              <iframe
                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                allowFullScreen={true}
                frameBorder="0"
                height="315"
                src="https://www.youtube.com/embed/test_url"
                title="video"
                width="560"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
    <p>
      No courses available
    </p>
  </main>,
  <div
    className="CookieConsent"
    style={
      Object {
        "alignItems": "baseline",
        "background": "#353535",
        "bottom": "0",
        "color": "white",
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "left": "0",
        "position": "fixed",
        "width": "100%",
        "zIndex": "999",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "flex": "1 0 300px",
          "margin": "15px",
        }
      }
    >
      This site uses cookies ...
    </div>
    <div
      className=""
    >
      <button
        aria-label="Accept cookies"
        className=""
        id="rcc-confirm-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffd42d",
            "border": "0",
            "borderRadius": "0px",
            "boxShadow": "none",
            "color": "black",
            "cursor": "pointer",
            "flex": "0 0 auto",
            "margin": "15px",
            "padding": "5px 10px",
          }
        }
      >
        Accept
      </button>
    </div>
  </div>,
  <div
    className="Toastify"
  />,
  <footer
    className="py-8 text-sm"
  >
    <div
      className="container"
    >
      <div
        className="flex justify-between"
      >
        <p
          className="text-center text-gray-500"
        >
          Powered by
          <a
            className="font-bold text-blue-500"
            href="https://coursemaker.org"
          >
             
            CourseMaker
          </a>
        </p>
        <div
          className="flex ml-auto space-x-5 text-blue-500"
        >
          <a
            href="/terms"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Terms
          </a>
          <a
            href="/privacy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Privacy
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`SchoolLandingPage renders correctly with missing fields 1`] = `
Array [
  <header
    className="sticky top-0 z-20 shadow-md text-white bg-blue-500"
  >
    <div
      className="container mx-auto"
    >
      <div
        className="flex flex-wrap items-center"
      >
        <a
          aria-current="page"
          className="inline-flex items-center h-20 text-lg md:h-24 logo"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
          style={Object {}}
        >
          <span
            className="font-semibold"
          >
            dsacademy2
          </span>
        </a>
        <nav
          className="items-center order-3 w-full ml-auto list-none lg:flex lg:space-y-0 space-y-3 
						lg:space-x-6 lg:order-1 lg:w-auto py-8 lg:py-0 border-t lg:border-t-0 border-white border-opacity-25 
						hidden"
        >
          <li>
            <a
              className=""
              href="/#overview"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Overview
            </a>
          </li>
          <li>
            <a
              className=""
              href="/#courses"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Courses
            </a>
          </li>
          <li>
            <a
              className=""
              href="/login"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Login
            </a>
          </li>
          <li>
            <a
              className="btn btn-white"
              href="/register"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Enroll Now
            </a>
          </li>
        </nav>
        <button
          className="block w-8 h-6 ml-auto cursor-pointer lg:hidden burger-menu 
						"
          onClick={[Function]}
          tabIndex={0}
        >
          <div
            className="bar"
          />
          <div
            className="bar"
          />
          <div
            className="bar"
          />
        </button>
      </div>
    </div>
  </header>,
  <main>
    <section
      className="py-16 md:py-20"
    >
      <div
        className="container"
      >
        <div>
          <h1
            className="mb-4 text-center"
          >
            dsacademy2
          </h1>
          <h3
            className="mb-4 text-center"
          />
          <p
            className="mx-auto text-center mb-6 text-xl font-light leading-relaxed text-gray-700 md:mb-10 lg:text-xl lg:w-7/12 xl:w-6/12"
          />
          <div
            className="text-center"
          >
            <a
              className="btn text-white bg-blue-500 text-lg btn-lg"
              href="/#courses"
              onClick={[Function]}
              onMouseEnter={[Function]}
              text="View Courses"
            >
              View Courses
            </a>
          </div>
        </div>
      </div>
    </section>
    <p>
      No courses available
    </p>
    <section
      className="py-16 text-center bg-gray-200 md:py-24"
      id="faqs"
    >
      <div
        className="container"
      >
        <div
          className="mx-auto inner lg:w-7/12"
        >
          <div
            className="mb-12"
          >
            <div
              className="flex items-center justify-center w-20 h-20 mx-auto mb-1 bg-blue-200 rounded-full md:w-24 md:h-24 icon-wrapper"
            >
              <img
                alt="Icon"
                className="w-12 md:w-16"
                src={Object {}}
              />
            </div>
            <h2>
              test heading
            </h2>
          </div>
          <div
            className="text-left text-gray-700 space-y-6 react-markdown"
          />
        </div>
      </div>
    </section>
  </main>,
  <div
    className="CookieConsent"
    style={
      Object {
        "alignItems": "baseline",
        "background": "#353535",
        "bottom": "0",
        "color": "white",
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "left": "0",
        "position": "fixed",
        "width": "100%",
        "zIndex": "999",
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "flex": "1 0 300px",
          "margin": "15px",
        }
      }
    >
      This site uses cookies ...
    </div>
    <div
      className=""
    >
      <button
        aria-label="Accept cookies"
        className=""
        id="rcc-confirm-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffd42d",
            "border": "0",
            "borderRadius": "0px",
            "boxShadow": "none",
            "color": "black",
            "cursor": "pointer",
            "flex": "0 0 auto",
            "margin": "15px",
            "padding": "5px 10px",
          }
        }
      >
        Accept
      </button>
    </div>
  </div>,
  <div
    className="Toastify"
  />,
  <footer
    className="py-8 text-sm"
  >
    <div
      className="container"
    >
      <div
        className="flex justify-between"
      >
        <p
          className="text-center text-gray-500"
        >
          Powered by
          <a
            className="font-bold text-blue-500"
            href="https://coursemaker.org"
          >
             
            CourseMaker
          </a>
        </p>
        <div
          className="flex ml-auto space-x-5 text-blue-500"
        >
          <a
            href="/terms"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Terms
          </a>
          <a
            href="/privacy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Privacy
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;
